# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-12-25 17:08:52 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-137

    Summary:
      web, implement the "If-Modified-Since" request header
    Revision:
      itools--main--0.12--patch-137


    modified files:
     Changelog cms/File.py cms/Handler.py web/headers.py
     web/response.py web/server.py


2005-12-25 16:20:48 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-136

    Summary:
      web, message headers are case-insensitive
    Revision:
      itools--main--0.12--patch-136


    new files:
     web/.arch-ids/message.py.id web/message.py

    modified files:
     Changelog cms/File.py web/context.py web/entities.py
     web/headers.py web/request.py web/response.py


2005-12-25 15:48:50 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-135

    Summary:
      web, implement the "Last-Modified" header
    Revision:
      itools--main--0.12--patch-135


    modified files:
     Changelog web/response.py


2005-12-25 15:48:29 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-134

    Summary:
      web, implement the "Last-Modified" header
    Revision:
      itools--main--0.12--patch-134


    modified files:
     Changelog cms/File.py web/headers.py


2005-12-25 15:25:06 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-133

    Summary:
      web, fix the format of the "Date" header in the response
    Revision:
      itools--main--0.12--patch-133


    modified files:
     Changelog web/response.py


2005-12-23 18:42:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-132

    Summary:
      web, implement HTTP-Date as of RFC 1945 (HTTP 1.0)
    Revision:
      itools--main--0.12--patch-132


    new files:
     web/.arch-ids/test_headers.py.id web/test_headers.py

    modified files:
     Changelog web/headers.py


2005-12-23 18:28:02 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-131

    Summary: